--- a/public/pesanuntukmu.html
+++ b/public/pesanuntukmu.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="@feelthisray - Script HTML by Feeldream Repl Co">
+    <meta name="description" content="Special Web Message To Hira By @RzDev">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-    <title>htmlku.com/pesanuntukmu</title>
+    <title>Kasyfia Special Message</title>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 	    <p>Sentuh untuk Mulai</p>
 	   <div class="awalan">
 	     <svg class='line' fill='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><g transform='translate(2.000000, 2.000000)'><path d='M9.27542857,0.714285714 C14.0030476,0.714285714 17.836381,4.54666667 17.836381,9.2752381 C17.836381,14.0038095 14.0030476,17.8361905 9.27542857,17.8361905 C4.54685714,17.8361905 0.71447619,14.0038095 0.71447619,9.2752381 C0.71447619,4.54666667 4.54685714,0.714285714 9.27542857,0.714285714 Z'></path><path d='M17.8989524,16.487619 C18.678,16.487619 19.3094286,17.12 19.3094286,17.8980952 C19.3094286,18.6780952 18.678,19.3095238 17.8989524,19.3095238 C17.1199048,19.3095238 16.4875238,18.6780952 16.4875238,17.8980952 C16.4875238,17.12 17.1199048,16.487619 17.8989524,16.487619 Z'></path></g></svg>
-	     <label style="font-size:16px">Htmlku.com/pesanuntukmu</label>
+	     <label style="font-size:16px">Message For Hira</label>
 	   </div>
 	</div>
   </div>
@@ -39,7 +39,7 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>Alooo Kamuu! 🩷</p>
+                    <p>Alooo Hiraa! 🩷</p>
                     <p>......</p>
                 </div>
             </div>
@@ -65,12 +65,12 @@
   </div>
   
   <div class="container" id="container">
-    <p class="titleC"><b>Alooo Kamuu! 🫣💗</b></p>
+    <p class="titleC"><b>Alooo Hiraa! 🫣💗</b></p>
     <script>teksAnimasi = [
-                    "Tetap semangat yaa! Aku tau kamu kuat, meskipun masalah yang datang ngga selalu ringan. Aku selalu ada di sini buat dengerin kamu, nemenin kamu, meskipun cuma dari jauh. Aku ngerti kalau kadang suasana di rumah bikin kamu capek, tapi jangan nyerah yaa! Aku percaya kamu bisa lewatin semuanya. Aku mungkin belum bisa bantu banyak, tapi aku bakal selalu ada buat kamu, kapan pun kamu butuh 🫶",
-                    "<br><i>Every day, I’m so proud of you</i>. Aku selalu jatuh cinta lagi dan lagi, dan ngobrol sama kamu tuh bikin aku seneng banget. Walaupun ngga tiap hari rasanya bahagia, tapi selama masih ada kamu, semuanya terasa lebih baik. Jadi, kalau ada apa-apa, cerita aja ke aku, jangan dipendem sendiri 🫠",
-				    "<br><b>Terakhir,</b><br>Aku sayaangg banget<br>samaa kamuu! 💐",
-				    "<br><i class='fontAlt'>I lovee yoouu</i> 😍🫢💗",
+                    "Selamat Hari Raya Idul Fitri Minal Aidzin Walfaidzin",
+                    "<br><i>Reren cuma mau bilang</i>. Reren minta maaf Kalau selama ini Reren pernah ngomong yang nggak enak, bercanda kelewatan, atau ada hal yang bikin kamu kesel tanpa aku sadar, Ren bener-bener minta maaf ya. ",
+				    "<br><b>Terakhir,</b><br>Kalau kamu maafin ketik .renterima ke bot ya<br>Jaga Diri Baik-baik Ya!!",
+				    "<br><i class='fontAlt'>Have a Nice Day</i> 🫢💗",
 				 ];
 	</script>
     <p class="messageC"></p>
